--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Your Name Here",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.12.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
